css/custom-widgets-shared-display-list-default.css
/* Mason custom widgets */

/* Shared styles - display list */

/* Default and small screens */


/* Style display list container */
.widget_gmuj_widget_display_list_grid_container {
    display: grid;
    grid-gap: 0.5em;
    grid-template-columns: repeat(auto-fit, minmax(255px,1fr));
    text-align: center;
}

/* Style display list links */
a.widget_gmuj_widget_display_list_item {
    text-align: center;
    box-shadow: 0 2px 2px rgba(0,0,0,0.15);
    transition: all 0.3s ease-in-out;
    background-color: white;
    display: block;
    max-width: 255px;
    overflow: hidden;
    position: relative;
    border-radius: 10px;
    margin: 0 auto 1em;
    text-decoration: none;
    padding-bottom:1em;
}

/* Style display list links on hover */
a.widget_gmuj_widget_display_list_item:hover {
    box-shadow: 0 2px 15px 2px rgba(0,0,0,0.15);
}

/* Style display list item image */
.widget_gmuj_widget_display_list_item_image {
    display:block !important;
    width: 255px;
    height: 190px;
    margin-bottom: 1em;
    object-fit: cover;
    object-position: center;
}

/* Style display list item name heading */
.widget_gmuj_widget_display_list_grid_container h4.widget_gmuj_widget_display_list_item_name {
    margin: 1.5em 0.5em 0;
    padding-bottom: 0.5em;
    font-size:1.2em;
}

/* Style display list item description */
.widget_gmuj_widget_display_list_item_description {
    text-align: center !important;
    position: absolute;
    top: -200px;
    left: 0;
    width: 100%;
    height: 190px;
    padding: 15px;
    opacity: 0;
    font-size: 0.9em;
    line-height: 1.5em;
    text-align: left;
    -webkit-transition: all 500ms;
    transition: all 500ms;
    transition-property: all;
    transition-duration: 500ms;
    transition-timing-function: ease;
    transition-delay: 0s;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
    filter: alpha(opacity=0);
}

/* Style display list item description for when the whole display list item is hovered-over */
a.widget_gmuj_widget_display_list_item:hover .widget_gmuj_widget_display_list_item_description {
    top: 0px;
    background: rgba(34, 34, 34, 0.8) none repeat scroll 0% 0% !important;
    color: #fff;
    font-weight:bold;
    text-align: center;
    cursor: inherit;
    opacity: 100;
}

